--- a/ZAD_1/makefile
+++ b/ZAD_1/makefile
@@ -1,7 +1,15 @@
-CX =g++
-CXFLAGS =-Wall -g
-	$(CX) $(CXFLAGS) main.o ctable.o menu.o -o test
-main.o:main.cpp ctable.h menu.h
-	$(CX) $(CXFLAGS) -c main.cpp
-ctable.o:ctable.h
-menu.o:ctable.h
+
+test: main.o ctable.o menu.o
+	g++ main.o ctable.o menu.o -o test
+
+main.o: main.cpp
+	g++ -c main.cpp
+
+ctable.o: ctable.cpp ctable.h
+	g++ -c ctable.cpp ctable.h
+
+menu.o: menu.cpp menu.h ctable.cpp
+	g++ -c menu.cpp menu.h ctable.cpp
+
+clean:
+	rm *.o *.gch test
